physics/forces.h

long double norm (long double x, long double y);
vector* weight (vector* r);
vector* thrust (long double c, long double t);
long double mass(t);